# warcaby-studia

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
checkers/: Board.cpp  Board.h
dto/: GreenCell.cpp  GreenCell.h  ObjectsRepository.cpp  ObjectsRepository.h  ScreenObject.cpp  ScreenObject.h  Side.h  State.h  ViewPage.cpp  ViewPage.h
glutconfigurations/: GlutConfig.cpp  GlutConfig.h
screens/: GameScreen.cpp  GameScreen.h  IntroScreen.cpp  IntroScreen.h
utils/: ScreenFabric.cpp  ScreenFabric.h  UsefulMethods.cpp  UsefulMethods.h
